# alloff-logistics

./: .gitignore  README.rst  manage.py  pyproject.toml
core/: models.py
lib/: admin.py  helpers.py
logistics/: handlers.py
logistics/admin/: __init__.py  inventory.py  package.py  received_item.py  shipping_notice.py
logistics/migrations/: 0001_initial.py
logistics/models/: __init__.py  common.py  courier.py  inventory.py  package.py  received_item.py  shipping_notice.py  supplier.py
logistics/protos/inventory_proto/: inventory.proto  inventory_pb2.py  inventory_pb2_grpc.py
logistics/protos/package_proto/: package.proto  package_pb2.py  package_pb2_grpc.py
logistics/protos/received_item_proto/: received_item.proto  received_item_pb2.py  received_item_pb2_grpc.py
logistics/protos/shipping_notice_item_proto/: shipping_notice_item.proto  shipping_notice_item_pb2.py  shipping_notice_item_pb2_grpc.py
logistics/protos/shipping_notice_proto/: shipping_notice.proto  shipping_notice_pb2.py  shipping_notice_pb2_grpc.py
logistics/serializers/: inventory.py  package.py  received_item.py  shipping_notice.py
logistics/services/: inventory.py  package.py  received_item.py  shipping_notice.py
logistics_server/: asgi.py  settings.py  urls.py  wsgi.py
logistics_server/.config/: nginx.conf  uvicorn.service
order/: admin.py  models.py
order/admin/: __init__.py  order.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  common.py  order.py  order_item.py  payment.py
tests/: test_logistics_server.py
