[tool.poetry]
name = "logistics-server"
version = "0.1.0"
description = ""
authors = ["ClareKang <shiningkey89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-admin = "^2.0.1"
django-filter = "^21.1"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
