[tool.poetry]
name = "logistics-server"
version = "0.1.0"
description = ""
authors = ["ClareKang <shiningkey89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-admin = "^2.0.1"
django-filter = "^21.1"
Markdown = "^3.3.6"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
djangogrpcframework = "^0.2.1"
grpcio = "^1.43.0"
grpcio-tools = "^1.43.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
